# python-mono-repo-architecture

./: .gitignore  LICENSE  README.md  pyproject.toml
apps/ironman/: pyproject.toml
apps/ironman/ironman/: main.py
ironman/: pyproject.toml
ironman/ironman/: main.py
ironman/tests/: test_ironman.py
libs/arc/datalib/: pyproject.toml
libs/arc/datalib/datalib/: main.py
libs/arc/datalib/tests/: test_datalib.py
libs/arc/logger/: pyproject.toml
reactorarc/: pyproject.toml
reactorarc/tests/: test_reactorarc.py
