[tool.poetry]
name = "python-mono-repo-architecture"
version = "0.1.0"
description = ""
authors = ["Leo Lana <leolucas.lana@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
