[tool.poetry]
name = "arc.datalib"
version = "0.1.0"
description = "Arc datalib"
authors = ["Leo Lana <leolucas.lana@hotmail.com>"]
packages = [{ include = "datalib" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
